<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/in_toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/userDispIcon"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_gravity="center"
        android:layout_margin="5sp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"

        android:src="@drawable/user_icon_disp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        android:padding="5sp"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_name_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6sp"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/FloatingLabel">

            <EditText
                android:id="@+id/firstname_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:drawableTint="#8E8E8E"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-light"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="4sp"
        android:orientation="horizontal"
        android:padding="5sp"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/last_name_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6sp"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/FloatingLabel">

            <EditText
                android:id="@+id/lastname_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:drawableTint="#8E8E8E"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-light"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="4sp"
        android:orientation="horizontal"
        android:padding="5sp"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emp_id_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6sp"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/FloatingLabel">

            <EditText
                android:id="@+id/emp_id_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:drawableTint="#8E8E8E"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-light"
                android:hint="@string/emp_id"
                android:inputType="text"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="4sp"
        android:orientation="horizontal"
        android:padding="5sp"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reportsto_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6sp"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/FloatingLabel">

            <EditText
                android:id="@+id/reportsto_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:drawableTint="#8E8E8E"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-light"
                android:hint="@string/reporting_to"
                android:inputType="text"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="4sp"
        android:orientation="horizontal"
        android:padding="5sp"
        android:weightSum="2">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/team_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6sp"
            app:errorTextAppearance="@style/ErrorText"
            app:hintTextAppearance="@style/FloatingLabel">

            <EditText
                android:id="@+id/team_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:drawableTint="#8E8E8E"
                android:focusableInTouchMode="false"
                android:fontFamily="sans-serif-light"
                android:hint="@string/team_name"
                android:inputType="text"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/change_pwd_button"
        android:layout_width="200sp"
        android:layout_height="30sp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/button_shape"
        android:text="@string/change_password"
        android:textColor="@color/white" />


</LinearLayout>