<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/in_toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/FloatingLabel">

                <EditText
                    android:id="@+id/editText_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="45dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:elevation="2dp"
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/current_pwd"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/font_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/FloatingLabel">

                <EditText
                    android:id="@+id/editText_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="45dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:elevation="2dp"
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/new_pwd"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/font_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_new_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:errorTextAppearance="@style/ErrorText"
                app:hintTextAppearance="@style/FloatingLabel">

                <EditText
                    android:id="@+id/editText_new_password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="45dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:elevation="2dp"
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/confirm_pwd"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/font_text_size" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/change_pwd_button"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_margin="20dp"
                android:background="@drawable/button_shape"
                android:elevation="@dimen/ten_dp"
                android:text="@string/change_password"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>